# systemd

./: CROSS_FILE
src/libudev/: CMakeLists.txt
